i18n/fr/docusaurus-plugin-content-docs/version-25.10/monitoring/basic-objects/timeperiods.md
---
id: timeperiods
title: Les périodes temporelles
description: "Définir des périodes temporelles pour planifier les contrôles et les notifications"
---

## Définition

Une période temporelle définit un intervalle de temps pour chacun des jours de la semaine. Ces périodes temporelles servent à activer les fonctionnalités de l’ordonnanceur sur une période donnée. Elles permettent de définir :

* Quand les commandes de vérification seront exécutées
* Quand des notifications seront envoyées.

## Configuration

Pour configurer des périodes temporelles, allez à la page : **Configuration > Utilisateurs > Périodes temporelles**.

Le bouton situé à gauche de la description de chaque période temporelle permet de visualiser les plages horaires actives.

1. Dans les champs **Nom de la période temporelle** et **Alias**, entrez un nom et une description.
2. Dans la section **Options basiques**, pour chaque jour de la semaine, définissez les plages horaires pendant lesquelles les vérifications et les notifications seront activées, en utilisant la [syntaxe décrite ci-dessous](#syntaxe-dune-période-temporelle). 

    - Ces définitions seront appliquées chaque semaine, indéfiniment.
    - Si vous laissez un jour vide, il n'y aura pas de supervision ce jour-là pour les actions rattachées à cette période temporelle.

3. Utilisez [l'onglet **Période d'exception**](#onglet-période-dexception) pour inclure ou exclure d'une période temporelle des jours spécifiques.

4. Une fois la période temporelle définie, vous pouvez l'utiliser :

    - Dans le champ **Période de contrôle** d'un hôte, d'un modèle d'hôtes, d'un service ou d'un groupe de services.
    - Dans le champ **Période de notification** d'un hôte, d'un modèle d'hôte, d'un service, d'un groupe de services ou d'un contact, ou bien dans le champ **Période d'escalade** d'une escalade de notifications.
   - Dans la configuration d'autres périodes temporelles. Toutes les périodes temporelles peuvent être réutilisées avec la fonctionnalité [modèles de période temporelle](#modèles-de-période-temporelle).

Le bouton **Réinitialiser** efface toutes les données non sauvegardées.

### Syntaxe d’une période temporelle

Les caractères suivants permettent de définir les périodes temporelles :

* Le caractère ”:” sépare les heures des minutes. Exemple : HH:MM
* Le caractère “-” indique une continuité entre deux horaires. Exemple : 9:00-13:00
* Le caractère ”,” permet de séparer deux plages horaires. Exemple : 9:00-13:00,14:00-17:00

Quelques exemples :

* 24 heures sur 24 et 7 jours sur 7 : pour chaque jour de la semaine, entrez 00:00-24:00.
* De 08h00 à 12h00 et de 14h00 à 18h45 les jours de semaine : 08:00-12:00,14:00-18:45 (à entrer au niveau des jours de semaine uniquement).
* Pour ne pas superviser pendant une journée entière, laissez le champ correspondant vide.

![image](../../assets/configuration/05timeperiod.png)

### Modèles de période temporelle

Le champ **Modèles de période temporelle** vous permet de réutiliser des périodes temporelles déjà créées pour ajouter leur configuration à d'autres périodes temporelles.

- Par exemple, si vous avez déjà créé un période temporelle qui inclut les samedis matins, vous pouvez la sélectionner pour que la période temporelle que vous êtes en train de créer inclue également les samedis matins.

- Si une période exclut les dimanches et l’autre les inclut, les dimanches seront finalement inclus.

### Onglet Période d'exception

L'onglet **Période d'exception** permet d’inclure ou d'exclure des jours exceptionnels.
Les plages définies ici écrasent la définition du fonctionnement régulier des jours établi dans l'onglet **Informations générales** pour faire l'opposé.
Par exemple, si votre période temporelle inclut les lundis, ajouter un lundi dans l'onglet d'exception aura pour effet d'exclure ce lundi.
Cependant, si votre période temporelle n'inclut pas les lundis, ajouter un lundi dans l'onglet d'exception aura pour effet d'inclure ce lundi.

Cas d'usage : Un administrateur souhaite définir une période temporelle qui regroupe les heures de fermeture du bureau, c’est à dire :

* De 18h00 à 07h59 les jours de semaine
* 24 heures sur 24 les weekends
* Les jours fériés et jours de fermeture exceptionnelle.

Afin de pouvoir définir les jours fériés ainsi que les jours de fermeture exceptionnelle, il est nécessaire d’utiliser les exceptions.

Pour ajouter une exception, dans le champ **Exceptions**, cliquez sur **Ajouter une nouvelle entrée**. Définissez une plage horaire pour chaque
journée exceptionnelle. 

> Utilisez la syntaxe suivante pour exclure des jours entiers de la supervision : 00:00-00:00.

Le tableau ci-dessous présente quelques exemples possibles :

| Jour(s)           | Plage(s) horaire(s)     | Explications                                                 |
| ----------------- | ----------------------- | ------------------------------------------------------------ |
| january 1         | 00:00-24:00             | Toute la journée le premier janvier de chaque année          |
| 2014-02-10        | 00:00-24:00             | Toute la journée du 10 février 2014                          |
| july 1 - august 1 | 00:00-24:00             | Tous les jours de chaque année du 1 juillet au 1 août        |
| november 30       | 08:00-19:00             | De 08h00 à 19h00 tous les 30 novembre de chaque année        |
| day 1 - 20        | 00:00-24:00             | Toute la journée du premier au 20 de chaque mois             |
| saturday -1       | 08:00-12:00,14:00-18:45 | Tous les derniers samedi du mois les heures ouvrées          |
| monday -2         | 00:00-24:00             | Tous les avant derniers lundi du mois toute la journée       |
| june 6 - june 21  | 00:00-00:00 ou laisser le champ vide   | Ne pas superviser entre le 6 et le 21 juin toute la journée  |
| june 12           | 00:00-08:00,18:00-24:00 | Superviser chaque 12 juin, sauf entre 8h et 18h              |

> Les périodes d'exception ne sont pas prises en compte dans [BAM](../../service-mapping/introduction.md), et dans les rapports concernant BAM dans [MBI](../../reporting/introduction.md).

## Période de contrôle et CMA

Lorsqu'un hôte est supervisé par le [Centreon Monitoring Agent (CMA)](../../cma/cma.md), la **période de contrôle** configurée sur l'hôte est propagée par Centreon Engine à l'agent. L'agent utilise cette période pour décider si un contrôle planifié doit être exécuté ou non à un instant donné.

Cette fonctionnalité a un impact sur deux aspects :

* **L'ordonnancement des contrôles** : l'agent ne déclenche un contrôle que si l'heure courante de la machine hôte se trouve dans une fenêtre valide de la période de contrôle configurée.
* **Le calcul de la freshness** : Centreon Engine calcule la freshness côté collecteur, en utilisant lui aussi la `check_period` configurée. Il est donc nécessaire que le fuseau horaire de la machine hôte supervisée et celui du collecteur (Centreon Engine) soient alignés : un désalignement de fuseaux horaires produira un comportement incorrect sans générer de message d'erreur côté engine.

Un **contrôle forcé** (déclenché manuellement) contourne toujours la période de contrôle et s'exécute quelle que soit la fenêtre de temps configurée.

> **Contrainte d'alignement de fuseau horaire** : le fuseau horaire de la machine hôte supervisée doit être identique à celui du collecteur (Centreon Engine). En cas de non-alignement, le calcul de freshness et la plage de contrôle ne seront pas cohérents entre l'agent et le moteur.

| # | Fuseau horaire machine hôte | Fuseau horaire collecteur (engine) | Fuseau horaire dans le .cfg Centreon | Résultat |
| --- | --- | --- | --- | --- |
| **Cas 1** | Référence | Identique à la machine hôte | Identique à la machine hôte | ✅ Les contrôles et le calcul de freshness respectent le fuseau horaire configuré |
| **Cas 2** | Référence | Identique à la machine hôte | _(non renseigné)_ | ✅ Les contrôles et le calcul de freshness respectent le fuseau horaire de la machine hôte |
| **Cas 3** | Référence | Différent de la machine hôte | _(non renseigné)_ | ❌ Comportement incorrect — aucun message d'erreur dans les logs |
| **Cas 4** | Référence | Identique à la machine hôte | Différent de la machine hôte | ❌ Erreur dans les logs CMA — aucune erreur dans les logs Centreon Engine |
